force-app/main/default/objects/cgcloud__Order_Template_Order_Payment_Template__c/cgcloud__Order_Template_Order_Payment_Template__c.object-meta.xml
<CustomObject>
    <description>Holds the association details for the order template and order payment template.</description>
    <label>Order Template Order Payment Template</label>
    <nameField>
        <displayFormat>OTOPT-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Template Order Payment Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>