force-app/main/default/objects/cgcloud__Order_Template_Order_Payment_Template__c/fields/cgcloud__Order_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Order_Template__c</fullName>
    <description>Reference to order template.</description>
    <label>Order Template</label>
    <referenceTo>cgcloud__Order_Template__c</referenceTo>
    <relationshipLabel>Order Template Order Payment Templates</relationshipLabel>
    <relationshipName>Order_Template_Order_Payment_Templates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>